Removed some warings by converting concatenations to use StringBuilder.